2. extract_corrdata(): added capibility to determine the side.

HELPERS:
1. xcorr_sides(): added "o" for one-sided but unclear negative or positive and "u" for unavailable side (e.g.,empty data)

UTILS:
1. Added cart2pol(), pol2cart(), and cart2compass() to convert coordinates between cartisian and polar.
2. Replace cascaded_union [deprecated by shapely] with unary_union.

SETUP:
1. Removed requirement for python<3.12. It seems to work with 3.12 on Purdue cluster, at least.

TYPES:
1. Added capibility to handle more side symbols for corrdata.

=======================================================
Updates in v0.9.0:
SCRIPTS:
1. Added the scripts for the whole workflow of extracting EGFs.
2. Removed some old scripts that are incompatible with the new usage and functions.

SCRIPTS/2_XCORR_MPI.py:
1. Added a switch named correct_orientation for channel orientation correction/conversion.
2. Added pad_thre to define the maximum threshold of size gaps between channels when doing orientation correction.
3. Added a switch named do_rotation for horizontal channel rotation
4. Added a switch named channel_pairs for specifying which channel pairs are saved.

SIMULATION MODEL:
1. Added build_vmodel() to create a layered model with linearly increasing velocity.

TYPES:
1. Added checking for corrdata.data.ndim when initilizing CorrData to make sure substack True for ndim 2 (or >1).

OBSMASTER:
1. Moved correct_orientations() out to utils, but kept the block of calling this function to be compatible with old usage.

UTILS:
1. Moved correct_orientations() here.
2. Fixed a bug where the number of traces in slicing_trace() is 1 trace less than the true number.

NOISE:
1. Added trace_info() to extract trace and orientation info.
2. Added the function to correct horizontal orientations and convert 1/2 channels to N/E channels.
3. Optimized the workflow for cross-correlation with the option to do rotation before xcorr.